@@ -4,6 +4,7 @@ import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import jakarta.mail.MessagingException;
+import jakarta.servlet.ServletException;
 import jakarta.servlet.UnavailableException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
@@ -37,7 +38,6 @@ import java.time.LocalTime;
 import java.time.format.DateTimeFormatter;
 import java.util.*;
 import java.util.concurrent.Semaphore;
-import java.util.stream.Collectors;
 
 /**
  * Controller for viewing all the created Gardens
@@ -61,6 +61,7 @@ public class GardensController {
     private final Semaphore semaphore = new Semaphore(MAX_REQUESTS_PER_SECOND);
 
     private static final int COUNT_PER_PAGE = 10;
+
 
     private volatile long lastRequestTime = Instant.now().getEpochSecond();
 
@@ -151,7 +152,7 @@ public class GardensController {
 
             weatherList.addAll(gardenWeather.getRetrievedWeatherData().stream()
                     .map(WeatherModel::new)
-                    .collect(Collectors.toList()));
+                    .toList());
         } catch (NullPointerException error) {
             noWeather = new DailyWeather("no_weather_available_icon.png", null, null);
             noWeather.setError("Location not found, please update your location to see the weather");
@@ -166,7 +167,7 @@ public class GardensController {
         return weatherList;
     }
 
-    private void handleWeatherMessages(List<WeatherModel> weatherList, Model model) {
+    private void handleWeatherMessages(List<WeatherModel> weatherList,  Garden garden, Model model) {
         WeatherModel beforeYesterdayWeather = weatherList.get(0);
         WeatherModel yesterdayWeather = weatherList.get(1);
         WeatherModel currentWeather = weatherList.get(2);
@@ -178,9 +179,11 @@ public class GardensController {
         if (Objects.equals(beforeYesterdayWeather.getDescription(), "Sunny")
                 && Objects.equals(yesterdayWeather.getDescription(), "Sunny")
                 && Objects.equals(currentWeather.getDescription(), "Sunny")) {
-            model.addAttribute("message",
-                    "There hasn't been any rain recently, make sure to water your plants if they need it");
+            model.addAttribute("message", "There hasn't been any rain recently, make sure to water your plants if they need it");
             model.addAttribute("goodMessage", false);
+            gardenService.changeGardenNeedsWatering(garden.getGardenId(), true);
+        } else {
+            gardenService.changeGardenNeedsWatering(garden.getGardenId(), false);
         }
     }
 
@@ -209,7 +212,8 @@ public class GardensController {
             @RequestParam(required = false) String weatherListJson,
             HttpServletRequest request,
             HttpServletResponse response,
-            Model model) {
+            RedirectAttributes redirectAttributes,
+            Model model) throws ServletException {
         logger.info("GET /my-gardens/{}", gardenId);
         Optional<Garden> optionalGarden = gardenService.getGardenById(gardenId);
 
@@ -237,7 +241,7 @@ public class GardensController {
                 });
             }
         } catch (Exception e) {
-            logger.error("An error occurred while mapping the weatherListJson: " + e.getMessage());
+            logger.error("An error occurred while mapping the weatherListJson: {}", e.getMessage());
         }
 
         try {
@@ -246,14 +250,14 @@ public class GardensController {
                 weatherList = (List<WeatherModel>) inputFlashMap.get("weatherList");
             }
         } catch (Exception e) {
-            logger.error("An error occurred while getting the weather list from the flash map: " + e.getMessage());
+            logger.error("An error occurred while getting the weather list from the flash map: {}", e.getMessage());
         }
 
         if (weatherList == null || weatherList.isEmpty()) {
             weatherList = getGardenWeatherData(garden);
         }
         if (weatherList.size() > 1) {
-            handleWeatherMessages(weatherList, model);
+            handleWeatherMessages(weatherList, garden, model);
         }
 
         User user = garden.getOwner();
@@ -267,7 +271,7 @@ public class GardensController {
                 });
             }
         } catch (Exception e) {
-            logger.error("An error occurred while reading the weatherListJson: " + e.getMessage());
+            logger.error("An error occurred while reading the weatherListJson: {}", e.getMessage());
         }
 
         weatherListJson = null;
@@ -275,7 +279,7 @@ public class GardensController {
         try {
             weatherListJson = objectMapper.writeValueAsString(weatherList);
         } catch (Exception e) {
-            logger.error("An error occurred while writing the weatherListJson: " + e.getMessage());
+            logger.error("An error occurred while writing the weatherListJson: {}", e.getMessage());
         }
 
         model.addAttribute("weatherListJson", weatherListJson);
@@ -289,19 +293,83 @@ public class GardensController {
         model.addAttribute("userName", user.getFirstName() + " " + user.getLastName());
         model.addAttribute("plantPictureError", plantPictureError);
 
-        // Used for displaying messages after a redirect e.g. from the verify page
-        Map<String, ?> inputFlashMap = RequestContextUtils.getInputFlashMap(request);
-        if (inputFlashMap != null) {
-            model.addAttribute("openModal", inputFlashMap.get("openModal"));
-            model.addAttribute("tagMessageText",inputFlashMap.get("tagMessageText"));
-        }
 
         List<GardenTagRelation> tagRelationsList = gardenTagService.getGardenTagRelationByGarden(garden);
 
         List<String> tagsList = tagRelationsList.stream()
                 .map(GardenTagRelation::getTag)
+                .filter(tag -> tag.getTagStatus() == TagStatus.APPROPRIATE)
                 .map(GardenTag::getTagName)
                 .toList();
+
+        List<String> pendingTags = tagRelationsList.stream()
+                .map(GardenTagRelation::getTag)
+                .filter(tag -> tag.getTagStatus() == TagStatus.PENDING)
+                .map(GardenTag::getTagName)
+                .toList();
+
+        model.addAttribute("pendingTags", pendingTags);
+
+        // Used for displaying messages after a redirect e.g. from the verify page
+        Map<String, ?> inputFlashMap = RequestContextUtils.getInputFlashMap(request);
+        if (inputFlashMap != null) {
+            model.addAttribute("openModal", inputFlashMap.get("openModal"));
+
+            // The below If statements check if the status of a pending tag has
+            // been updated and adjust error messages acrodingly if thats the case
+            if (inputFlashMap.get("pendingTagName") == null)
+            {
+                model.addAttribute("tagMessageText",inputFlashMap.get("tagMessageText"));
+            }
+            else
+            {
+                Optional<GardenTag> pendingTag = gardenTagService.getByName(inputFlashMap.get("pendingTagName").toString());
+
+                if (pendingTag.isPresent())
+                {
+                    if (pendingTag.get().getTagStatus() == TagStatus.INAPPROPRIATE)
+                    {
+                        // security service will return old strike count so adding one to account for this tag.
+                        int userStrikes = securityService.getCurrentUser().getStrikes() + 1;
+                        logger.info("{} now has {} strikes", garden.getOwner().getFirstName(), userStrikes);
+                        model.addAttribute("tagErrorText", "This tag does not meet the language " +
+                                "standards for Gardener's Grove. A warning strike has been added to your account");
+                        if (userStrikes == 5) {
+                            model.addAttribute("tagErrorText", "You have added an inappropriate tag for the fifth time." +
+                                    " You have been sent a warning email. " +
+                                    "If you add another inappropriate tag, you will be banned for a week.");
+                        }
+                        else if (userStrikes == 6)
+                        {
+                            redirectAttributes.addFlashAttribute("message", "Your account is blocked for 7 days due to inappropriate conduct");
+                            redirectAttributes.addFlashAttribute("goodMessage", false);
+                            request.logout();
+                            return "redirect:/login";
+                        }
+                        model.addAttribute("tagMessageText","");
+                    }
+                    else if (pendingTag.get().getTagStatus() == TagStatus.APPROPRIATE)
+                    {
+                        model.addAttribute("tagMessageText","");
+                    }
+                    else
+                    {
+                        model.addAttribute("tagMessageText",inputFlashMap.get("tagMessageText"));
+                    }
+                }
+                else
+                {
+                    model.addAttribute("tagMessageText",inputFlashMap.get("tagMessageText"));
+                }
+            }
+        }
+
+        if (garden.getOwner().isBanned()) {
+            redirectAttributes.addFlashAttribute("message", "Your account is blocked for 7 days due to inappropriate conduct");
+            redirectAttributes.addFlashAttribute("goodMessage", false);
+            request.logout();
+            return "redirect:/login";
+        }
 
         model.addAttribute("tagsList", tagsList);
         return "gardenDetailsPage";
@@ -347,11 +415,12 @@ public class GardensController {
                 weatherList = objectMapper.readValue(weatherListJson, new TypeReference<List<WeatherModel>>() {
                 });
             } catch (Exception e) {
-                logger.error("An error occurred while reading the weatherListJson: " + e.getMessage());
+                logger.error("An error occurred while reading the weatherListJson: {}", e.getMessage());
             }
         }
         redirectAttributes.addFlashAttribute("page", page);
         redirectAttributes.addFlashAttribute("weatherList", weatherList);
+
 
         return "redirect:/my-gardens/{gardenId}";
 
@@ -368,7 +437,7 @@ public class GardensController {
         List<WeatherModel> weatherList;
         weatherList = getGardenWeatherData(garden);
         if (weatherList.size() > 1) {
-            handleWeatherMessages(weatherList, model);
+            handleWeatherMessages(weatherList, garden, model);
         }
 
         User user = garden.getOwner();
@@ -390,9 +459,17 @@ public class GardensController {
 
         List<String> tagsList = tagRelationsList.stream()
                 .map(GardenTagRelation::getTag)
+                .filter(gardenTag -> gardenTag.getTagStatus() == TagStatus.APPROPRIATE)
                 .map(GardenTag::getTagName)
                 .toList();
 
+        List<String> pendingTags = tagRelationsList.stream()
+                .map(GardenTagRelation::getTag)
+                .filter(gardenTag -> gardenTag.getTagStatus() == TagStatus.PENDING)
+                .map(GardenTag::getTagName)
+                .toList();
+
+        model.addAttribute("pendingTags", pendingTags);
         model.addAttribute("tagsList", tagsList);
 
         return "gardenDetailsPage";
@@ -411,7 +488,8 @@ public class GardensController {
                                    @RequestParam(defaultValue = "1") int page,
                                    RedirectAttributes redirectAttributes,
                                    HttpServletResponse response,
-                                   Model model) {
+                                   HttpServletRequest request,
+                                   Model model) throws ServletException, InterruptedException {
         logger.info("POST /my-gardens/{}/tag", gardenId);
 
         ValidationResult tagResult = InputValidator.validateTag(tag);
@@ -441,6 +519,7 @@ public class GardensController {
             if (!gardenAlreadyHasThisTag && tagResult.valid() && gardenTag.getTagStatus() != TagStatus.INAPPROPRIATE) {
                 gardenTagService.addGardenTagRelation(new GardenTagRelation(garden, gardenTag));
             }
+
         }
 
         Optional<GardenTag> newTag = gardenTagService.getByName(tag);
@@ -465,6 +544,19 @@ public class GardensController {
                             "If you add another inappropriate tag, you will be banned for a week.");
                 }
             }
+
+            List<WeatherModel> weatherList;
+            weatherList = getGardenWeatherData(garden);
+            if (weatherList.size() > 1) {
+                handleWeatherMessages(weatherList, garden, model);
+            }
+
+            if (garden.getOwner().isBanned()) {
+                redirectAttributes.addFlashAttribute("message", "Your account is blocked for 7 days due to inappropriate conduct");
+                redirectAttributes.addFlashAttribute("goodMessage", false);
+                request.logout();
+                return "redirect:/login";
+            }
             return setGardenDetailModel(garden,tag,page,model);
         }
 
@@ -472,10 +564,19 @@ public class GardensController {
         {
             redirectAttributes.addFlashAttribute("tagMessageText", String.format("Your tag \"%s\" is currently being checked for profanity. " +
                     "If it follows the language standards for our app, it will be added to your garden.",tag));
+            redirectAttributes.addFlashAttribute("pendingTagName", tag);
         }
 
         redirectAttributes.addAttribute("page", page);
         redirectAttributes.addFlashAttribute("openModal", "true");
+
+        if (garden.getOwner().isBanned()) {
+            redirectAttributes.addFlashAttribute("message", "Your account is blocked for 7 days due to inappropriate conduct");
+            redirectAttributes.addFlashAttribute("goodMessage", false);
+            request.logout();
+            return "redirect:/login";
+        }
+
 
         return "redirect:/my-gardens/{gardenId}";
 
@@ -626,8 +727,7 @@ public class GardensController {
         return gardenTagService.getAllSimilar(query);
     }
 
-    private void asynchronousTagProfanityCheck(String tagName, User user)
-    {
+    private void asynchronousTagProfanityCheck(String tagName, User user) throws InterruptedException {
         Thread asyncThread = new Thread((() -> {
             boolean tagContainsProfanity = profanityService.containsProfanity(tagName, PriorityType.LOW);
             if (!tagContainsProfanity)
@@ -636,9 +736,9 @@ public class GardensController {
             }
             else
             {
+                securityService.handleStrikeUser(user);
                 gardenTagService.updateGardenTagStatus(tagName, TagStatus.INAPPROPRIATE);
                 gardenTagService.deleteRelationByTagName(tagName);
-                securityService.handleStrikeUser(user);
                 logger.info("{} has {} strikes", user.getFirstName(), user.getStrikes());
 
             }
